k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-learning
  namespace: devops-learning
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: devops-learning.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-learning
            port:
              number: 80
